# AOCom

./: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  update.json  update.json.example
scripts/: gen-icon.mjs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/call/: page.tsx
src/components/: UpdateChecker.tsx
src/components/admin/: AdminPanel.tsx  AdminUserMenu.tsx
src/components/auth/: LoginScreen.tsx
src/components/chat/: ChatArea.tsx  DragDropUpload.tsx  EmojiPicker.tsx  LinkPreview.tsx
src/components/layout/: Dashboard.tsx  FriendsList.tsx  Sidebar.tsx  Titlebar.tsx
src/components/music/: MusicPanel.tsx
src/components/settings/: BannedUsersModal.tsx  MicTest.tsx  PttSettings.tsx  SettingsModal.tsx
src/components/ui/: Avatar.tsx  icons.tsx
src/hooks/: useAuth.ts  useBootstrap.ts  useCleanExit.ts  useGlobalShortcuts.ts  useHeartbeat.ts  useMessages.ts  useMusicPlayer.ts  usePresence.ts  usePushToTalk.ts  useRing.ts  useWebRTC.ts
src/lib/: admin.ts  avatar.ts  image.ts  keybinds.ts  markdown.tsx  media.ts  sounds.ts  supabase.ts  tauri.ts  time.ts  types.ts  version.ts  volume.ts  youtube.ts
src/stores/: app-store.ts
supabase/: admin-bans.sql  admin-channels.sql  admin-kick.sql  admin-panel.sql  music-v2.sql  music.sql  schema.sql  security-hardening-2.sql  security-hardening-4.sql  security-hardening.sql
(+1 files in other folders)
